--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,7 @@
 @charset "utf-8";
 
+/*CSSカスタムプロパティ（サイト全体を一括管理する為の設定）
+---------------------------------------------------------------------------*/
 :root {
     --text-color: #eee;
     --primary-color: #d15d08;
@@ -7,6 +9,8 @@
     --global-space: 5vw;
 }
 
+/*animation1のキーフレーム設定（開閉ブロックのアニメーションに使用）
+---------------------------------------------------------------------------*/
 @keyframes animation1 {
     0% {
         left: -200px;
@@ -17,6 +21,8 @@
     }
 }
 
+/*opa1のキーフレーム設定（汎用的）
+---------------------------------------------------------------------------*/
 @keyframes opa1 {
     0% {
         opacity: 0;
@@ -27,6 +33,8 @@
     }
 }
 
+/*fadeInのキーフレーム設定（テキストのフェードインに使用）
+---------------------------------------------------------------------------*/
 @keyframes fadeIn {
     0% {
         opacity: 0;
@@ -39,6 +47,8 @@
     }
 }
 
+/*全体の設定
+---------------------------------------------------------------------------*/
 body * {
     box-sizing: border-box;
 }
@@ -55,7 +65,6 @@ body {
     body {
         font-size: 16px;
     }
-
 }
 
 body {
@@ -116,6 +125,8 @@ section+section {
     margin-top: 3rem;
 }
 
+/*リンクテキスト全般の設定
+---------------------------------------------------------------------------*/
 a {
     color: var(--text-color);
     transition: 0.3s;
@@ -126,6 +137,8 @@ a:hover {
     color: var(--primary-color);
 }
 
+/*コンテナー（サイト全体を囲むブロック）
+---------------------------------------------------------------------------*/
 body:not(.home) #container {
     height: 100%;
     display: flex;
@@ -133,19 +146,21 @@ body:not(.home) #container {
     justify-content: space-between;
 }
 
+/*コンテンツ（フッター関連「以外」を囲むブロック）
+---------------------------------------------------------------------------*/
 #contents {
     flex: 1;
     padding: var(--global-space);
 }
 
 @media screen and (max-width:600px) {
-
     #contents {
         padding-top: 80px;
     }
-
 }
 
+/*header（ロゴが入った最上段のブロック）
+---------------------------------------------------------------------------*/
 header {
     display: flex;
     align-items: center;
@@ -165,7 +180,6 @@ header {
     header {
         position: fixed;
     }
-
 }
 
 #logo img {
@@ -180,6 +194,8 @@ header {
     font-weight: 800;
 }
 
+/*メニューブロック初期設定
+---------------------------------------------------------------------------*/
 #menubar {
     display: none;
 }
@@ -222,6 +238,8 @@ a.ddmenu::before {
     margin-right: 0.5em;
 }
 
+/*大きな端末用のメニューブロック設定
+---------------------------------------------------------------------------*/
 .large-screen #menubar>nav>ul {
     display: flex;
     font-size: 0.85rem;
@@ -237,11 +255,15 @@ a.ddmenu::before {
     background: #fff;
 }
 
+/*大きな端末、小さな端末、共通のドロップダウンメニュー設定
+---------------------------------------------------------------------------*/
 .large-screen #menubar ul ul,
 .small-screen #menubar ul ul {
     animation: opa1 0.5s 0.1s both;
 }
 
+/*大きな端末用のドロップダウンメニュー
+---------------------------------------------------------------------------*/
 .large-screen #menubar ul ul {
     position: absolute;
     z-index: 100;
@@ -251,6 +273,8 @@ a.ddmenu::before {
     margin-top: 0.4rem;
 }
 
+/*小さな端末用の開閉ブロック
+---------------------------------------------------------------------------*/
 .small-screen #menubar.display-block {
     position: fixed;
     overflow: auto;
@@ -285,6 +309,8 @@ a.ddmenu::before {
     padding: 1rem 2rem 2rem;
 }
 
+/*３本バー（ハンバーガー）アイコン設定
+---------------------------------------------------------------------------*/
 #menubar_hdr {
     animation: opa1 0s 0.2s both;
     position: fixed;
@@ -329,6 +355,8 @@ a.ddmenu::before {
     display: none;
 }
 
+/*main
+---------------------------------------------------------------------------*/
 main h2 {
     font-family: "Reddit Sans", "Noto Sans JP", sans-serif;
     font-size: 3rem;
@@ -351,12 +379,13 @@ main h3 {
     border-bottom: 3px solid var(--text-color);
 }
 
+/*2カラム
+---------------------------------------------------------------------------*/
 .main-contents {
     margin-bottom: 5rem;
 }
 
 @media screen and (min-width:900px) {
-
     main.column {
         display: flex;
         justify-content: space-between;
@@ -380,9 +409,10 @@ main h3 {
     .sub-contents:nth-child(3) {
         order: 3;
     }
-
 }
 
+/*サブコンテンツ設定
+---------------------------------------------------------------------------*/
 .sub-contents h3 {
     display: block;
     margin: 0;
@@ -393,6 +423,8 @@ main h3 {
     padding: 0.5rem 0;
 }
 
+/*サブメニュー設定
+---------------------------------------------------------------------------*/
 .submenu {
     padding: 0;
     margin: 0 0 1rem;
@@ -417,6 +449,8 @@ main h3 {
     border-top: none;
 }
 
+/*フッターメニュー
+---------------------------------------------------------------------------*/
 #footermenu {
     margin: 0 !important;
     padding: 20px;
@@ -429,198 +463,358 @@ main h3 {
     padding: 0 10px;
 }
 
+/*フッター設定
+---------------------------------------------------------------------------*/
 footer small {
     font-size: 100%;
 }
 
 footer {
-    font-size: 0.8rem;
+    font-size: 0.7rem;
+    text-align: center;
+    padding: 20px;
 }
 
-a.page-numbers {
-    display: inline-block;
-    padding: 0.2rem 0.5rem;
+footer a {
+    color: inherit;
+    text-decoration: none;
 }
 
-.prev.page-numbers,
-.next.page-numbers {
-    font-size: 0;
-}
-
-.pagination .current {
-    border-bottom: 2px solid #ccc;
-    font-weight: 700;
-}
-
-.pagination .dots {
-    padding: 0.2rem 0.5rem;
-}
-
-blockquote {
-    border-left: 5px solid #ddd;
-    padding: 0.5rem 1rem;
-    background: #f2f2f2;
-    border-radius: 0.5rem;
-    margin: 0;
-}
-
-caption {
-    text-align: left;
-}
-
-table {
-    width: 100%;
-}
-
-table th {
-    background: #e2e2e2;
-    text-align: left;
-    padding: 0.5rem;
-    white-space: nowrap;
-}
-
-table td {
-    padding: 0.5rem;
-}
-
-table.border th,
-table.border td {
-    border: 1px solid #ddd;
-}
-
-.tdimg img {
+footer .pr {
     display: block;
-    margin: 1rem auto;
-    border-radius: 10px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
 }
 
-button,
-input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-    cursor: pointer;
-    padding: 0.5rem 2rem;
+/*テキストのフェードイン設定
+---------------------------------------------------------------------------*/
+.fade-in-text {
+    visibility: hidden;
+}
+
+.char {
+    display: inline-block;
+    opacity: 0;
+    animation: fadeIn 0.05s linear both;
+}
+
+/*お知らせブロック
+---------------------------------------------------------------------------*/
+.new dd {
+    padding-bottom: 1rem;
+}
+
+.new dt span {
+    display: inline-block;
+    text-align: center;
+    line-height: 1.8;
+    border-radius: 3px;
+    width: 8rem;
+    transform: scale(0.8);
+    background: #fff;
+    color: #777;
+    border: 1px solid #333;
+}
+
+.new .icon-bg1 {
+    background: #333;
+    color: #fff;
+}
+
+.new .icon-bg2 {
+    background: #ff0000;
+    color: #fff;
+}
+
+@media screen and (min-width:700px) {
+    .new {
+        display: grid;
+        grid-template-columns: auto 1fr;
+    }
+}
+
+/*list-grid1
+---------------------------------------------------------------------------*/
+.list-grid1 {
+    display: grid;
+    color: #555;
+}
+
+.list-grid1 .list {
+    display: grid;
+}
+
+.list-grid1 .list * {
+    margin: 0;
+    padding: 0;
+}
+
+.list-grid1 .list p {
+    font-size: 0.85rem;
+}
+
+@media screen and (min-width:500px) {
+    .list-grid1 {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1rem;
+    }
+}
+
+@media screen and (min-width:800px) {
+    .list-grid1 {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 1rem;
+    }
+}
+
+.list-grid1 .list {
+    padding: 1rem;
+    background: #fff;
+    grid-template-rows: auto 1fr;
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
+}
+
+.list-grid1 .list figure img {
+    margin-bottom: 0.5rem;
+}
+
+/*ボタン（btnと、btn-border-radius）
+---------------------------------------------------------------------------*/
+.btn a,
+.btn-border-radius a {
+    display: block;
+    text-decoration: none;
+    font-size: 1rem;
+    text-align: center;
+    background: var(--primary-color) !important;
+    color: var(--primary-text-color) !important;
+    padding: 0.5rem !important;
+    margin-top: 1rem !important;
+}
+
+.btn a:hover,
+.btn-border-radius a:hover {
+    filter: brightness(1.2);
+}
+
+.btn-border-radius a {
+    display: inline-block;
+    padding: 0.5rem 2rem !important;
+    border-radius: 100px;
+    background: #f53e72 !important;
+}
+
+/*bg1背景色がついたブロック
+---------------------------------------------------------------------------*/
+.bg1 {
+    position: relative;
     background: var(--primary-color);
     color: var(--primary-text-color);
-    border: none;
-    border-radius: 100px;
+    padding-top: 5vw;
+    padding-bottom: 5vw;
+    margin-top: 10vw;
+    margin-bottom: 10vw;
+    margin-left: calc(-1 * var(--global-space));
+    margin-right: calc(-1 * var(--global-space));
+    padding-left: var(--global-space);
+    padding-right: var(--global-space);
 }
 
-button:hover,
-input[type="button"]:hover,
-input[type="reset"]:hover,
-input[type="submit"]:hover {
-    background: var(--primary-text-color);
-    color: var(--primary-color);
+.bg1 a {
+    color: inherit;
 }
 
-input,
-textarea,
-select {
-    border: 1px solid #ddd;
-    padding: 0.5rem;
+.bg1::before,
+.bg1::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: calc(5vw + 1px);
+    background: var(--primary-color);
 }
 
-.bg1,
-.bg2,
-.bg3,
-.bg4,
-.bg5 {
-    padding: 1rem 0;
-    color: #fff;
+.bg1::before {
+    top: -5vw;
+    clip-path: polygon(0 100%, 100% 0, 100% 100%);
 }
 
-.bg1 {
-    background: #000000;
+.bg1::after {
+    bottom: -5vw;
+    clip-path: polygon(0 0, 100% 0, 0 100%);
 }
 
-.bg2 {
-    background: #18448e;
-}
 
-.bg3 {
-    background: #132940;
-}
-
-.bg4 {
-    background: #104d86;
-}
-
-.bg5 {
-    background: #092251;
-}
-
-.bg1 *,
-.bg2 *,
-.bg3 *,
-.bg4 *,
-.bg5 * {
-    color: #fff;
-}
-
-.bg1 h2,
-.bg2 h2,
-.bg3 h2,
-.bg4 h2,
-.bg5 h2 {
-    color: #fff;
-}
-
-.mgb0 {
-    margin-bottom: 0;
-}
-
-.box2 {
-    padding: 0.5rem;
-    border-radius: 0.5rem;
-}
-
-img.border,
-p.border,
-td.border {
-    border: 1px solid #ddd;
-    padding: 0.5rem;
-}
-
-.pcn {
+/*詳細ページのサムネイル切り替えブロック
+---------------------------------------------------------------------------*/
+.thumbnail-view-parts {
+    max-width: 1000px;
+    margin: 0 auto 1rem;
     text-align: center;
 }
 
-.flex,
-.in-flex {
+.thumbnail-parts {
     display: flex;
-    align-items: center;
+    justify-content: center;
+    margin-bottom: 2rem;
 }
 
-p.btn a {
-    display: inline-block;
-    padding: 0.5rem 2rem;
-    border: 1px solid #d15d08;
-    background: #d15d08;
-    color: #eee;
+.thumbnail-parts img {
+    width: 100px;
+    margin: 2px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.thumbnail-parts img:hover {
+    opacity: 0.8;
+}
+
+
+/*テーブル（ta1）
+---------------------------------------------------------------------------*/
+.ta1 caption {
+    font-weight: bold;
+    padding: 0.5rem 1rem;
+    background: var(--primary-color);
+    margin-bottom: 1rem;
     border-radius: 5px;
 }
 
-p.btn a:hover {
-    background: #eee;
-    color: #d15d08;
+.ta1 {
+    table-layout: fixed;
+    border-top: 1px solid #ccc;
+    width: 100%;
+    margin-bottom: 5rem;
 }
 
-.bg1 p.btn a,
-.bg2 p.btn a,
-.bg3 p.btn a,
-.bg4 p.btn a,
-.bg5 p.btn a {
-    border: 1px solid #fff;
+.ta1 tr {
+    border-bottom: 1px solid #ccc;
+}
+
+.ta1 th,
+.ta1 td {
+    padding: 1rem;
+    word-break: break-all;
+}
+
+.ta1 th {
+    width: 30%;
+    text-align: left;
+}
+
+@media screen and (min-width:900px) {
+    .ta1 th {
+        width: 20%;
+    }
+}
+
+/*PAGE TOP（↑）設定
+---------------------------------------------------------------------------*/
+.pagetop-show {
+    display: block;
+}
+
+.pagetop a {
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    z-index: 99;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
     color: #fff;
+    font-size: 1.5rem;
+    background: rgba(0, 0, 0, 0.2);
+    width: 60px;
+    line-height: 60px;
+    border-radius: 50%;
 }
 
-.bg1 p.btn a:hover,
-.bg2 p.btn a:hover,
-.bg3 p.btn a:hover,
-.bg4 p.btn a:hover,
-.bg5 p.btn a:hover {
-    background: #fff;
-    color: var(--primary-color);
+/*その他
+---------------------------------------------------------------------------*/
+.clearfix::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+.color-check,
+.color-check a {
+    color: #ff0000 !important;
+}
+
+.l {
+    text-align: left !important;
+}
+
+.c {
+    text-align: center !important;
+}
+
+.r {
+    text-align: right !important;
+}
+
+.ws {
+    width: 95%;
+    display: block;
+}
+
+.wl {
+    width: 95%;
+    display: block;
+}
+
+.mb0 {
+    margin-bottom: 0px !important;
+}
+
+.mb30 {
+    margin-bottom: 30px !important;
+}
+
+.look {
+    display: inline-block;
+    padding: 0px 10px;
+    background: #eee;
+    color: #333;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    margin: 5px 0;
+    word-break: break-all;
+}
+
+.small {
+    font-size: 0.75em;
+}
+
+.large {
+    font-size: 2em;
+    letter-spacing: 0.1em;
+}
+
+.pc {
+    display: none;
+}
+
+.dn {
+    display: none !important;
+}
+
+.block {
+    display: block !important;
+}
+
+@media screen and (min-width:900px) {
+    .ws {
+        width: 48%;
+        display: inline;
+    }
+
+    .sh {
+        display: none;
+    }
+
+    .pc {
+        display: block;
+    }
 }
