--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,8 +3,9 @@
 /* Font Awesome */
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css");
 /* Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Reddit+Sans:ital,wght@0,200..900;1,200..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Reddit+Sans:ital,wght@0,200..900;1,200..900&display=swap');
 /* StyleSheet */
-@import url("style.css");
+@import url("menubar.css");
 @import url("slide.css");
+@import url("style.css");
