--- a/resources/css/slide.css
+++ b/resources/css/slide.css
@@ -1,5 +1,9 @@
 @charset "utf-8";
 
+/* ===========================================
+ * slide.css
+ * ======================================== */
+
 #mainimg {
     width: 100%;
     height: 0;
