--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,5 +6,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Reddit+Sans:ital,wght@0,200..900;1,200..900&display=swap');
 /* StyleSheet */
-@import url("menubar-hdr.css");
+@import url("hamburger-menu.css");
 @import url("style.css");
