--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,10 +8,17 @@
 ---------------------------------------------------------------------------*/
 :root {
     --text-color: #eee;
+    /*テキストカラー*/
+
     --primary-color: #d15d08;
+    /*テンプレートのメインとなる色*/
     --primary-text-color: #eee;
+    /*メインカラーの上で使うテキスト色*/
+
     --global-space: 5vw;
+    /*サイト内の左右へとる余白を一括管理しています。画面幅100%＝100vwです。*/
 }
+
 
 /*animation1のキーフレーム設定（開閉ブロックのアニメーションに使用）
 ---------------------------------------------------------------------------*/
@@ -25,6 +32,7 @@
     }
 }
 
+
 /*opa1のキーフレーム設定（汎用的）
 ---------------------------------------------------------------------------*/
 @keyframes opa1 {
@@ -36,6 +44,7 @@
         opacity: 1;
     }
 }
+
 
 /*fadeInのキーフレーム設定（テキストのフェードインに使用）
 ---------------------------------------------------------------------------*/
@@ -51,6 +60,7 @@
     }
 }
 
+
 /*全体の設定
 ---------------------------------------------------------------------------*/
 body * {
@@ -61,27 +71,40 @@ html,
 body {
     height: 100%;
     font-size: 13px;
+    /*基準となるフォントサイズ。*/
 }
 
+/*画面幅900px以上の追加指定*/
 @media screen and (min-width:900px) {
 
     html,
     body {
         font-size: 16px;
+        /*基準となるフォントサイズ。*/
     }
+
 }
+
+/*追加指定ここまで*/
+
 
 body {
     margin: 0;
     padding: 0;
     font-family: "Noto Sans JP", "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", Meiryo, "メイリオ", "Osaka", "MS PGothic", "ＭＳ Ｐゴシック", sans-serif;
+    /*フォント種類（ゴシック）*/
     font-optical-sizing: auto;
+    /*font-weight: 300;*/
     -webkit-text-size-adjust: none;
     background: #132940;
+    /*背景色*/
     color: var(--text-color);
+    /*文字色。css冒頭で指定しているtext-colorを読み込みます*/
     line-height: 2;
+    /*行間*/
 }
 
+/*リセット*/
 figure {
     margin: 0;
 }
@@ -102,10 +125,12 @@ nav ul {
     list-style: none;
 }
 
+/*table全般の設定*/
 table {
     border-collapse: collapse;
 }
 
+/*画像全般の設定*/
 img {
     border: none;
     max-width: 100%;
@@ -113,14 +138,17 @@ img {
     vertical-align: middle;
 }
 
+/*videoタグ*/
 video {
     max-width: 100%;
 }
 
+/*iframeタグ*/
 iframe {
     width: 100%;
 }
 
+/*他*/
 input {
     font-size: 1rem;
 }
@@ -129,17 +157,24 @@ section+section {
     margin-top: 3rem;
 }
 
+
 /*リンクテキスト全般の設定
 ---------------------------------------------------------------------------*/
 a {
     color: var(--text-color);
+    /*文字色。css冒頭で指定しているtext-colorを読み込みます*/
     transition: 0.3s;
+    /*hoverまでにかける時間。0.3秒。*/
 }
 
+/*マウスオン時*/
 a:hover {
     text-decoration: none;
+    /*下線を消す*/
     color: var(--primary-color);
+    /*文字色。css冒頭で指定しているprimary-colorを読み込みます*/
 }
+
 
 /*コンテナー（サイト全体を囲むブロック）
 ---------------------------------------------------------------------------*/
@@ -147,30 +182,46 @@ body:not(.home) #container {
     height: 100%;
     display: flex;
     flex-direction: column;
+    /*子要素を縦並びにする*/
     justify-content: space-between;
+    /*並びかたの種類の指定*/
 }
+
 
 /*コンテンツ（フッター関連「以外」を囲むブロック）
 ---------------------------------------------------------------------------*/
 #contents {
     flex: 1;
     padding: var(--global-space);
+    /*コンテンツ内の余白。css冒頭で指定しているglobal-spaceを読み込みます。*/
 }
 
+/*画面幅600px以下の追加指定*/
 @media screen and (max-width:600px) {
+
     #contents {
         padding-top: 80px;
+        /*コンテンツ内の上の余白だけ上書き*/
     }
+
 }
+
+/*追加指定ここまで*/
+
 
 /*header（ロゴが入った最上段のブロック）
 ---------------------------------------------------------------------------*/
+/*ヘッダーブロック*/
 header {
     display: flex;
+    /*flexボックスを使う指定*/
     align-items: center;
+    /*垂直揃えの指定。天地中央に配置されるように。*/
     justify-content: space-between;
     height: 70px;
+    /*ヘッダーの高さ*/
     padding: 1vw 3vw;
+    /*ヘッダー内の余白。上下、左右への順番。*/
     font-family: "Reddit Sans", "Noto Sans JP", sans-serif;
     font-optical-sizing: auto;
     font-weight: 700;
@@ -180,131 +231,267 @@ header {
     width: 100%;
 }
 
+/*画面幅900px以上の追加指定*/
 @media screen and (min-width:900px) {
+
+    /*ヘッダーブロック*/
     header {
         position: fixed;
+        /*スクロールしても動かないようにする指定。*/
     }
+
 }
 
+/*ロゴ（※画像にする場合）*/
 #logo img {
     display: block;
     width: 160px;
+    /*ロゴ画像の幅*/
 }
 
+/*ロゴ（テキストにする場合）*/
 #logo a {
     display: block;
     text-decoration: none;
     font-size: 1.2rem;
+    /*文字サイズを120%に*/
     font-weight: 800;
+    /*文字の太さ*/
 }
+
+/*３本バー（ハンバーガー）アイコン設定
+---------------------------------------------------------------------------*/
+/*３本バーを囲むブロック*/
+#hamburger-menu {
+    animation: opa1 0s 0.2s both;
+    position: fixed;
+    z-index: 101;
+    cursor: pointer;
+    right: 3vw;
+    /*右からの配置場所指定*/
+    top: 1vw;
+    /*上からの配置場所指定*/
+    padding: 16px 14px;
+    /*上下、左右への余白*/
+    width: 46px;
+    /*幅（３本バーが出ている場合の幅になります）*/
+    height: 46px;
+    /*高さ*/
+    display: flex;
+    /*flexボックスを使う指定*/
+    flex-direction: column;
+    /*子要素（３本バー）部分。flexはデフォルトで横並びになるので、それを縦並びに変更。*/
+    justify-content: space-between;
+    /*並びかたの種類の指定*/
+}
+
+/*バー１本あたりの設定*/
+#hamburger-menu span {
+    display: block;
+    transition: 0.3s;
+    /*アニメーションにかける時間。0.3秒。*/
+    border-top: 1.5px solid #333;
+    /*線の幅、線種、色*/
+}
+
+/*×印が出ている状態の3本バーの背景色*/
+#hamburger-menu.ham {
+    background: #ff0000;
+}
+
+/*×印が出ている状態の設定。※１本目および２本目のバーの共通設定。*/
+#hamburger-menu.ham span:nth-of-type(1),
+#hamburger-menu.ham span:nth-of-type(3) {
+    transform-origin: center center;
+    /*変形の起点。センターに。*/
+    width: 20px;
+    /*バーの幅*/
+    border-color: #fff;
+    /*線の色だけ上書き*/
+}
+
+/*×印が出ている状態の設定。※１本目のバー。*/
+#hamburger-menu.ham span:nth-of-type(1) {
+    transform: rotate(45deg) translate(3.8px, 5px);
+    /*回転45°と、X軸Y軸への移動距離の指定*/
+}
+
+/*×印が出ている状態の設定。※３本目のバー。*/
+#hamburger-menu.ham span:nth-of-type(3) {
+    transform: rotate(-45deg) translate(3.8px, -5px);
+    /*回転-45°と、X軸Y軸への移動距離の指定*/
+}
+
+/*×印が出ている状態の設定。※２本目のバー。*/
+#hamburger-menu.ham span:nth-of-type(2) {
+    display: none;
+    /*２本目は使わないので非表示にする*/
+}
+
 
 /*main
 ---------------------------------------------------------------------------*/
+/*h2(見出し)要素*/
 main h2 {
     font-family: "Reddit Sans", "Noto Sans JP", sans-serif;
     font-size: 3rem;
+    /*文字サイズ。基準の3倍の大きさに。*/
     letter-spacing: 0.1em;
+    /*文字間隔を少しだけ広く*/
     color: var(--primary-color);
+    /*文字色。css冒頭で指定しているprimary-colorを読み込みます*/
 }
 
+/*bg1背景の上でのh2*/
 .bg1 h2 {
     color: var(--primary-text-color);
+    /*文字色。css冒頭で指定しているprimary-text-colorを読み込みます*/
 }
 
+/*h2内の小文字部分*/
 main h2 .hosoku {
     display: block;
     font-weight: normal;
     font-size: 0.3em;
+    /*親要素の40%のサイズに*/
 }
 
+/*h3(見出し)要素*/
 main h3 {
     display: inline-block;
     border-bottom: 3px solid var(--text-color);
+    /*下線の幅、線種、varは色のことで、css冒頭で指定しているtext-colorを読み込みます*/
 }
+
 
 /*2カラム
 ---------------------------------------------------------------------------*/
 .main-contents {
     margin-bottom: 5rem;
+    /*ボックスの下に空けるスペース。subとの間の余白です。5文字分。*/
 }
 
+/*画面幅900px以上の追加指定*/
 @media screen and (min-width:900px) {
+
+    /*カラムで使う為の指定*/
     main.column {
         display: flex;
+        /*横並びにする*/
         justify-content: space-between;
+        /*並びかたの種類の指定*/
         gap: 2rem;
+        /*main-contentsとsub-contentsの間のマージン的な隙間*/
     }
 
+    /*main-contentsブロック*/
     .main-contents {
         margin-bottom: 0;
         order: 2;
+        /*並び順。数字の小さい順番に表示されます。*/
         flex: 1;
     }
 
+    /*sub-contentsブロック共通*/
     .sub-contents {
         width: 230px;
+        /*幅*/
     }
 
+    /*1つ目のsub-contents*/
     .sub-contents:nth-child(2) {
         order: 1;
+        /*並び順。数字の小さい順番に表示されます。*/
     }
 
+    /*2つ目のsub-contents*/
     .sub-contents:nth-child(3) {
         order: 3;
+        /*並び順。数字の小さい順番に表示されます。３番目という意味なので一番右側に表示されます。*/
     }
+
 }
+
+/*追加指定ここまで*/
+
 
 /*サブコンテンツ設定
 ---------------------------------------------------------------------------*/
+/*サブコンテンツ内のh3要素(見出し)*/
 .sub-contents h3 {
     display: block;
     margin: 0;
     text-align: center;
+    /*テキストをセンタリング*/
     border-radius: 5px 5px 0px 0px;
+    /*角を丸くする指定。左上、右上、右下、左下の順番。*/
     border: 1px solid #ccc;
+    /*下線の幅、線種、色*/
     background: linear-gradient(transparent, rgba(0, 0, 0, 0.03));
+    /*背景グラデーション。transparentは透明の事。0,0,0は黒の事で0.03は色が3%出た状態。*/
     padding: 0.5rem 0;
+    /*上下、左右への見出し内の余白*/
 }
+
 
 /*サブメニュー設定
 ---------------------------------------------------------------------------*/
+/*サブメニューブロック全体*/
 .submenu {
     padding: 0;
     margin: 0 0 1rem;
+    /*上、左右、下へのマージン*/
 }
 
+/*メニュー１個あたり*/
 .submenu a {
     display: block;
     text-decoration: none;
     padding: 0.2rem 1rem;
+    /*上下、左右へのメニュー内の余白*/
 }
 
+/*メニュー１個あたり（子メニュー以外）*/
 .submenu>li {
     border: 1px solid #ccc;
+    /*枠線の幅、線種、色*/
     border-top: none;
+    /*上の線だけなくす*/
 }
 
+/*子メニュー*/
 .submenu li li a {
     padding-left: 2rem;
+    /*左に余白を空ける*/
 }
 
+/*h3見出しの下にサブメニューが続く場合にメニューの上の線をなくす*/
 .sub-contents h3+nav .submenu {
     border-top: none;
 }
 
+
 /*フッターメニュー
 ---------------------------------------------------------------------------*/
+/*メニューブロック全体*/
 #footermenu {
     margin: 0 !important;
     padding: 20px;
+    /*ブロック内の余白*/
     text-align: center;
+    /*テキストを中央に*/
     font-size: 0.8rem;
+    /*文字サイズ。bodyのfont-sizeの80%です。*/
 }
 
+/*メニュー１個あたり*/
 #footermenu li {
     display: inline-block;
+    /*簡易的に横並びにする*/
     padding: 0 10px;
+    /*上下、左右への余白*/
 }
+
 
 /*フッター設定
 ---------------------------------------------------------------------------*/
@@ -314,147 +501,231 @@ footer small {
 
 footer {
     font-size: 0.7rem;
+    /*文字サイズ。bodyのfont-sizeの70%です。*/
     text-align: center;
+    /*内容をセンタリング*/
     padding: 20px;
+    /*ボックス内の余白*/
 }
 
+/*リンクテキスト*/
 footer a {
     color: inherit;
     text-decoration: none;
 }
 
+/*著作部分*/
 footer .pr {
     display: block;
 }
 
+
 /*テキストのフェードイン設定
 ---------------------------------------------------------------------------*/
+/* 初期状態でテキストを非表示にする */
 .fade-in-text {
     visibility: hidden;
 }
 
+/* アニメーションを適用するクラス。
+animationの行の「0.05s」が文字の出現のなめらかさで、大きいほどなめらかに出てきます。
+１文字ずつの出現する際の時差は、js/main.jsの「テキストのフェードイン効果」の中にある「0.2」で調整できます。*/
 .char {
     display: inline-block;
     opacity: 0;
     animation: fadeIn 0.05s linear both;
 }
 
+
 /*お知らせブロック
 ---------------------------------------------------------------------------*/
+/*記事の下に空ける余白*/
 .new dd {
     padding-bottom: 1rem;
 }
 
+/*ブロック内のspan。日付の横のアイコン的な部分の共通設定*/
 .new dt span {
     display: inline-block;
     text-align: center;
     line-height: 1.8;
+    /*行間（アイコンの高さ）*/
     border-radius: 3px;
+    /*角を丸くする指定*/
     width: 8rem;
+    /*幅。６文字分。*/
     transform: scale(0.8);
+    /*80%のサイズに縮小*/
     background: #fff;
+    /*背景色*/
     color: #777;
+    /*文字色*/
     border: 1px solid #333;
 }
 
+/*icon-bg1*/
 .new .icon-bg1 {
     background: #333;
+    /*背景色*/
     color: #fff;
+    /*文字色*/
 }
 
+/*icon-bg2*/
 .new .icon-bg2 {
     background: #ff0000;
+    /*背景色*/
     color: #fff;
+    /*文字色*/
 }
 
+/*画面幅700px以上の追加指定*/
 @media screen and (min-width:700px) {
+
+    /*ブロック全体*/
     .new {
         display: grid;
+        /*gridを使う指定*/
         grid-template-columns: auto 1fr;
+        /*横並びの指定。日付とアイコン部分の幅は自動で、内容が入るブロックは残り幅一杯とる。*/
     }
+
 }
+
+/*追加指定ここまで*/
+
 
 /*list-grid1
 ---------------------------------------------------------------------------*/
+/*listブロック全体を囲むブロック*/
 .list-grid1 {
     display: grid;
     color: #555;
+    /*文字色*/
 }
 
+/*ボックス１個あたり*/
 .list-grid1 .list {
     display: grid;
 }
 
+/*list内の全ての要素のmarginとpaddingを一旦リセット*/
 .list-grid1 .list * {
     margin: 0;
     padding: 0;
 }
 
+/*ボックス内のp要素*/
 .list-grid1 .list p {
     font-size: 0.85rem;
+    /*文字サイズを85%に*/
 }
 
+/*画面幅500px以上の追加指定*/
 @media screen and (min-width:500px) {
+
+    /*listブロック全体を囲むブロック*/
     .list-grid1 {
         grid-template-columns: repeat(2, 1fr);
+        /*2列にする指定。4列にしたければrepeat(4, 1fr)とする。*/
         gap: 1rem;
+        /*ブロックの間に空けるマージン的な指定*/
     }
+
 }
 
+/*追加指定ここまで*/
+
+
+/*画面幅800px以上の追加指定*/
 @media screen and (min-width:800px) {
+
+    /*listブロック全体を囲むブロック*/
     .list-grid1 {
         grid-template-columns: repeat(3, 1fr);
+        /*3列にする指定。4列にしたければrepeat(4, 1fr)とする。*/
         gap: 1rem;
+        /*ブロックの間に空けるマージン的な指定*/
     }
+
 }
 
+/*追加指定ここまで*/
+
+
+/*ボックス１個あたり*/
 .list-grid1 .list {
     padding: 1rem;
+    /*ボックス内の余白*/
     background: #fff;
+    /*背景色*/
     grid-template-rows: auto 1fr;
+    /*１つ目（この場合はfigure要素のサイズ）は自動に、２つ目（この場合はtextブロック））を残った幅で使う*/
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
+    /*ボックスの影。右へ、下へ、ぼかし幅、0,0,0は黒の事で0.1は色が10%出た状態。*/
 }
 
+/*ボックス内のfigure画像*/
 .list-grid1 .list figure img {
     margin-bottom: 0.5rem;
+    /*画像の下に空けるスペース*/
 }
+
 
 /*ボタン（btnと、btn-border-radius）
 ---------------------------------------------------------------------------*/
+/*ボタン共通*/
 .btn a,
 .btn-border-radius a {
     display: block;
     text-decoration: none;
     font-size: 1rem;
     text-align: center;
+    /*テキストをセンタリング*/
     background: var(--primary-color) !important;
+    /*背景色。css冒頭で指定しているprimary-colorを読み込みます*/
     color: var(--primary-text-color) !important;
+    /*文字色。css冒頭で指定しているprimary-text-colorを読み込みます*/
     padding: 0.5rem !important;
+    /*ボタン内の余白*/
     margin-top: 1rem !important;
 }
 
+/*ボタン共通（マウスオン時に少し明るくする）*/
 .btn a:hover,
 .btn-border-radius a:hover {
     filter: brightness(1.2);
 }
 
+/*btn-border-radiusの上書き*/
 .btn-border-radius a {
     display: inline-block;
     padding: 0.5rem 2rem !important;
+    /*ボタン内の余白*/
     border-radius: 100px;
+    /*角丸の指定。適当に大きければOK。*/
     background: #f53e72 !important;
 }
+
 
 /*bg1背景色がついたブロック
 ---------------------------------------------------------------------------*/
 .bg1 {
     position: relative;
     background: var(--primary-color);
+    /*背景色。css冒頭で指定しているprimary-colorを読み込みます*/
     color: var(--primary-text-color);
+    /*文字色。css冒頭で指定しているprimary-text-colorを読み込みます*/
     padding-top: 5vw;
+    /*ボックス内の上に空ける余白。お好みで調整して下さい。*/
     padding-bottom: 5vw;
+    /*ボックス内の下に空ける余白。お好みで調整して下さい。*/
     margin-top: 10vw;
+    /*ボックス外の上に空ける余白。お好みで調整して下さい。*/
     margin-bottom: 10vw;
+    /*ボックス外の下に空ける余白。お好みで調整して下さい。*/
+
+    /*以下は変更不要*/
     margin-left: calc(-1 * var(--global-space));
     margin-right: calc(-1 * var(--global-space));
     padding-left: var(--global-space);
@@ -465,6 +736,9 @@ footer .pr {
     color: inherit;
 }
 
+/*以下のheightの行が傾斜の角度です。vwという単位は画面幅に対してで、画面幅100%＝100vwになります。
+つまり、画面幅に対して常に同じ傾斜具合になります。1pxの数字は時々隙間が発生するのでそれを防ぐ為の措置です。
+傾斜（height）を変更したい場合は、下にある「.bg1::before」のtopと「.bg1::after」のbottomの数字も変更。*/
 .bg1::before,
 .bg1::after {
     content: "";
@@ -473,82 +747,127 @@ footer .pr {
     width: 100%;
     height: calc(5vw + 1px);
     background: var(--primary-color);
+    /*背景色。css冒頭で指定しているprimary-colorを読み込みます*/
 }
 
 .bg1::before {
     top: -5vw;
+    /*上の、heightの「5vw」と数字を揃えて先頭にマイナスをつける*/
     clip-path: polygon(0 100%, 100% 0, 100% 100%);
+    /*三角形の形を作っています*/
 }
 
 .bg1::after {
     bottom: -5vw;
+    /*上の、heightの「5vw」と数字を揃えて先頭にマイナスをつける*/
     clip-path: polygon(0 0, 100% 0, 0 100%);
+    /*三角形の形を作っています*/
 }
 
 
 /*詳細ページのサムネイル切り替えブロック
 ---------------------------------------------------------------------------*/
+/*大きな画像が表示されるブロック*/
 .thumbnail-view-parts {
     max-width: 1000px;
+    /*最大幅*/
     margin: 0 auto 1rem;
+    /*ブロック要素を中央に配置。下に1文字分のマージンをとる。*/
     text-align: center;
+    /*画像が小さい場合でもセンタリングされるように*/
 }
 
+/*サムネイル全体を囲むブロック*/
 .thumbnail-parts {
     display: flex;
+    /*flexを使う指定*/
     justify-content: center;
+    /*並びかたの種類の指定。これはセンタリングする指定。*/
     margin-bottom: 2rem;
+    /*下に空けるスペース。２文字分。*/
 }
 
+/*サムネイル画像*/
 .thumbnail-parts img {
     width: 100px;
+    /*サムネイルの幅*/
     margin: 2px;
+    /*サムネイル間のスペース*/
     cursor: pointer;
+    /*リンクタグではないが、クリックできる事をわかりやすくする為にリンクと同じポインターにしておきます。*/
     transition: 0.3s;
+    /*マウスオンまでにかける時間。3秒。*/
 }
 
 .thumbnail-parts img:hover {
     opacity: 0.8;
+    /*マウスオン時に80%だけ色を出す。つまり薄くなります。*/
 }
 
 
 /*テーブル（ta1）
 ---------------------------------------------------------------------------*/
+/*テーブル１行目に入った見出し部分（※caption）*/
 .ta1 caption {
     font-weight: bold;
+    /*太字に*/
     padding: 0.5rem 1rem;
+    /*ボックス内の余白*/
     background: var(--primary-color);
+    /*背景色*/
     margin-bottom: 1rem;
+    /*下に空けるスペース*/
     border-radius: 5px;
+    /*角を丸くする指定*/
 }
 
+/*ta1テーブルブロック設定*/
 .ta1 {
     table-layout: fixed;
     border-top: 1px solid #ccc;
+    /*テーブルの一番上の線。幅、線種、色*/
     width: 100%;
+    /*幅*/
     margin-bottom: 5rem;
+    /*テーブルの下に空けるスペース。5文字分。*/
 }
 
+/*tr（１行分）タグ設定*/
 .ta1 tr {
     border-bottom: 1px solid #ccc;
+    /*テーブルの下線。幅、線種、色*/
 }
 
+/*th（左側）、td（右側）の共通設定*/
 .ta1 th,
 .ta1 td {
     padding: 1rem;
+    /*ボックス内の余白*/
     word-break: break-all;
+    /*英語などのテキストを改行で自動的に折り返す設定。これがないと、テーブルを突き抜けて表示される場合があります。*/
 }
 
+/*th（左側）のみの設定*/
 .ta1 th {
     width: 30%;
+    /*幅*/
     text-align: left;
+    /*左よせにする*/
 }
 
+/*画面幅900px以上の追加指定*/
 @media screen and (min-width:900px) {
+
+    /*th（左側）のみの設定*/
     .ta1 th {
         width: 20%;
+        /*幅*/
     }
+
 }
+
+/*追加指定ここまで*/
+
 
 /*PAGE TOP（↑）設定
 ---------------------------------------------------------------------------*/
@@ -556,21 +875,32 @@ footer .pr {
     display: block;
 }
 
+/*ボタンの設定*/
 .pagetop a {
     display: block;
     text-decoration: none;
     text-align: center;
     z-index: 99;
     position: fixed;
+    /*スクロールに追従しない(固定で表示)為の設定*/
     right: 20px;
+    /*右からの配置場所指定*/
     bottom: 20px;
+    /*下からの配置場所指定*/
     color: #fff;
+    /*文字色*/
     font-size: 1.5rem;
+    /*文字サイズ*/
     background: rgba(0, 0, 0, 0.2);
+    /*背景色。0,0,0は黒の事で0.2は色が20%出た状態。*/
     width: 60px;
+    /*幅*/
     line-height: 60px;
+    /*高さ*/
     border-radius: 50%;
+    /*円形にする*/
 }
+
 
 /*その他
 ---------------------------------------------------------------------------*/
@@ -647,7 +977,9 @@ footer .pr {
     display: block !important;
 }
 
+/*画面幅900px以上の追加指定*/
 @media screen and (min-width:900px) {
+
     .ws {
         width: 48%;
         display: inline;
@@ -660,4 +992,7 @@ footer .pr {
     .pc {
         display: block;
     }
+
 }
+
+/*追加指定ここまで*/
